--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="/src/assets/logo.svg" alt="Brand logo" width="215" height="35">
                 </div>
                 <div class="header__search">
-                    <button type="submit">
+                    <button type="button">
                         <img src="/src/assets/search.svg" alt="search">
                     </button>
                     <input type="text" name="search" placeholder="Поиск">
